--- a/paper/sections/implementation.tex
+++ b/paper/sections/implementation.tex
@@ -113,7 +113,7 @@ few times. \\
 Our code is at \textbf{\url{https://github.com/nlarusstone/corels}}.
 \end{kdd}
 \begin{arxiv}
-few times.
+small number of times. \\
 
 Our implementation of CORELS is at \url{https://github.com/nlarusstone/corels}.
 \end{arxiv}
