--- a/paper/sections/implementation.tex
+++ b/paper/sections/implementation.tex
@@ -126,6 +126,7 @@ Our implementation of CORELS is at \url{https://github.com/nlarusstone/corels}.
 \vspace{-1mm}
 \end{kdd}
 
+\begin{arxiv}
 \section{Curiosity}
 
 We introduce a custom priority metric that we call \emph{curiosity}:
@@ -158,3 +159,4 @@ misclassification error and the expected regularization penalty:
   \Cap(x_n, p_k \given \Prefix) \wedge \one [ q_k \neq y_n ] \right)
   + \frac{\Reg K N}{\NCap} = \Curiosity(\Prefix, \x, \y).
 \end{align}
+\end{arxiv}
