--- a/paper/sections/bounds.tex
+++ b/paper/sections/bounds.tex
@@ -550,7 +550,7 @@ on the support of an antecedent~$p_i$ in an optimal rule list~$\OptimalRL$.
 \end{proof}
 \end{arxiv}
 
-Thus, we can prune a prefix~$\Prefix$ if any of its antecedents capture less than
+Thus, we can prune a prefix~$\Prefix$ if any of its antecedents captures less than
 a fraction~$\Reg$ of data, even if~${b(\Prefix, \x, \y) < \OptimalObj}$.
 %
 \begin{arxiv}
