--- a/paper/sections/bounds.tex
+++ b/paper/sections/bounds.tex
@@ -1859,7 +1859,7 @@ ${e_u = \{x_n : \forall m, \one [ \Cap(x_n, s_m) = \Cap(x_i, s_m) ] \}}$,
 \end{kdd}
 and let~$q_u$ be the minority class label among points in~$e_u$, then
 \begin{align}
-\theta(e_u) = \frac{1}{N} \sum_{n=1}^N \one [ x_n \in e_u ] \wedge \one [ y_n = q_u ].
+\theta(e_u) = \frac{1}{N} \sum_{n=1}^N \one [ x_n \in e_u ]\, \one [ y_n = q_u ].
 \label{eq:theta}
 \end{align}
 
@@ -1923,11 +1923,11 @@ not captured by prefix~$\Prefix$.
 \begin{align}
 \Loss(\RL, \x, \y) &= \frac{1}{N} \sum_{u=1}^U \sum_{n=1}^N \left( \neg\, \Cap(x_n, \Prefix)
    + \sum_{k=1}^K \Cap(x_n, p_k \given \Prefix) \right)
-   \wedge \one [x_n \in e_u] \wedge \one[y_n = q_u] \nn \\
+   \wedge \one [x_n \in e_u]\, \one[y_n = q_u] \nn \\
 &= \frac{1}{N} \sum_{u=1}^U \sum_{n=1}^N \left( \neg\, \Cap(x_n, \Prefix)
    + \Cap(x_n, \Prefix) \right)
-   \wedge \one [x_n \in e_u] \wedge \one[y_n = q_u] \nn \\
-&= \frac{1}{N} \sum_{u=1}^U \sum_{n=1}^N \one [ x_n \in e_u ] \wedge \one [ y_n = q_u ]
+   \wedge \one [x_n \in e_u]\, \one[y_n = q_u] \nn \\
+&= \frac{1}{N} \sum_{u=1}^U \sum_{n=1}^N \one [ x_n \in e_u ]\, \one [ y_n = q_u ]
 = \sum_{u=1}^U \theta(e_u),
 \end{align}
 where the final equality applies the definition of~$\theta(e_u)$ in~\eqref{eq:theta}.
@@ -1966,14 +1966,14 @@ where
 \begin{arxiv}
 \begin{align}
 b_0(\Prefix, \x, \y) = \frac{1}{N} \sum_{u=1}^U \sum_{n=1}^N
-    \neg\, \Cap(x_n, \Prefix) \wedge \one [ x_n \in e_u ] \wedge \one [ y_n = q_u ].
+    \neg\, \Cap(x_n, \Prefix) \wedge \one [ x_n \in e_u ]\, \one [ y_n = q_u ].
 \label{eq:lb-b0}
 \end{align}
 \end{arxiv}
 \begin{kdd}
 \begin{align}
 b_0(\Prefix, \x, \y) = \frac{1}{N} \sum_{u=1}^U \sum_{n=1}^N
-    \neg\, \Cap(x_n, \Prefix) \wedge \one [ x_n \in e_u ] \wedge \one [ y_n = q_u ]. \nn
+    \neg\, \Cap(x_n, \Prefix) \wedge \one [ x_n \in e_u ]\, \one [ y_n = q_u ]. \nn
 \end{align}
 \end{kdd}
 \end{theorem}
@@ -1991,10 +1991,10 @@ instead of counting mistakes made by the default rule:
 \begin{align}
 \Loss_0(\Prefix, \Default, \x, \y)
 &= \frac{1}{N} \sum_{n=1}^N \neg\, \Cap(x_n, \Prefix) \wedge \one [ q_0 \neq y_n ] \nn \\
-&= \frac{1}{N} \sum_{u=1}^U \sum_{n=1}^N \neg\, \Cap(x_n, \Prefix) \wedge \one [ q_0 \neq y_n ]
-  \wedge \one [ x_n \in e_u ] \nn \\
-&\ge \frac{1}{N} \sum_{u=1}^U \sum_{n=1}^N \neg\, \Cap(x_n, \Prefix) \wedge \one [ y_n = q_u ]
-  \wedge \one [ x_n \in e_u ] = b_0(\Prefix, \x, \y),
+&= \frac{1}{N} \sum_{u=1}^U \sum_{n=1}^N \neg\, \Cap(x_n, \Prefix) \wedge
+  \one [ q_0 \neq y_n ]\, \one [ x_n \in e_u ] \nn \\
+&\ge \frac{1}{N} \sum_{u=1}^U \sum_{n=1}^N \neg\, \Cap(x_n, \Prefix) \wedge
+  \one [ y_n = q_u ]\, \one [ x_n \in e_u ] = b_0(\Prefix, \x, \y),
 \label{eq:lb-equiv-pts-uncap}
 \end{align}
 where the final equality comes from the definition of~$b_0(\Prefix, \x, \y)$ in~\eqref{eq:lb-b0}.
@@ -2024,7 +2024,7 @@ the lower bound on~${\Obj(\RL', \x, \y)}$ in~\eqref{eq:equiv-pts-extend}.
 First, let us define
 \begin{align}
 \Upsilon(\Prefix', K, \x, \y) \equiv \frac{1}{N} \sum_{u=1}^U \sum_{n=1}^N
-    \sum_{k=K+1}^{K'} \Cap(x_n, p_k \given \Prefix') \wedge \one [ x_n \in e_u ] \wedge \one [ y_n = q_u ].
+    \sum_{k=K+1}^{K'} \Cap(x_n, p_k \given \Prefix') \wedge \one [ x_n \in e_u ]\, \one [ y_n = q_u ].
 \end{align}
 Now, we write a lower bound on~${b(\Prefix', \x, \y)}$ with respect to~${b(\Prefix, \x, \y)}$:
 \begin{align}
@@ -2033,21 +2033,21 @@ Now, we write a lower bound on~${b(\Prefix', \x, \y)}$ with respect to~${b(\Pref
 &= \Loss_p(\Prefix, \Labels, \x, \y) + \Reg K + \frac{1}{N} \sum_{n=1}^N \sum_{k=K}^{K'} \Cap(x_n, p_k \given \Prefix') \wedge \one [ q_k \neq y_n ] + \Reg (K' - K) \nn \\
 &= b(\Prefix, \x, \y) + \frac{1}{N} \sum_{n=1}^N \sum_{k=K+1}^{K'} \Cap(x_n, p_k \given \Prefix') \wedge \one [ q_k \neq y_n ] + \Reg (K' - K) \nn \\
 &= b(\Prefix, \x, \y) + \frac{1}{N} \sum_{u=1}^U \sum_{n=1}^N \sum_{k=K+1}^{K'} \Cap(x_n, p_k \given \Prefix')
-  \wedge \one [ q_k \neq y_n ] \wedge \one [ x_n \in e_u ] + \Reg (K' - K) \nn \\
+  \wedge \one [ q_k \neq y_n ]\, \one [ x_n \in e_u ] + \Reg (K' - K) \nn \\
 &\ge b(\Prefix, \x, \y) + \frac{1}{N} \sum_{u=1}^U \sum_{n=1}^N \sum_{k=K+1}^{K'} \Cap(x_n, p_k \given \Prefix')
-  \wedge \one [ y_n = q_u ] \wedge \one [ x_n \in e_u ] + \Reg (K' - K) \nn \\
+  \wedge \one [ y_n = q_u ]\, \one [ x_n \in e_u ] + \Reg (K' - K) \nn \\
 &= b(\Prefix, \x, \y) + \Upsilon(\Prefix', K, \x, \y) + \Reg (K' - K).
 \label{eq:equiv-pts-b}
 \end{align}
 Next, we write ${b_0(\Prefix, \x, \y)}$ with respect to~${b_0(\Prefix', \x, \y)}$,
 \begin{align}
 &b_0(\Prefix, \x, \y) = \frac{1}{N} \sum_{u=1}^U \sum_{n=1}^N
-    \neg\, \Cap(x_n, \Prefix) \wedge \one [ x_n \in e_u ] \wedge \one [ y_n = q_u ] \nn \\
+    \neg\, \Cap(x_n, \Prefix) \wedge \one [ x_n \in e_u ]\, \one [ y_n = q_u ] \nn \\
 &= \frac{1}{N} \sum_{u=1}^U \sum_{n=1}^N
     \left(\neg\, \Cap(x_n, \Prefix')+ \sum_{k=K+1}^{K'} \Cap(x_n, p_k \given \Prefix') \right)
-    \wedge \one [ x_n \in e_u ] \wedge \one [ y_n = q_u ] \nn \\
+    \wedge \one [ x_n \in e_u ]\, \one [ y_n = q_u ] \nn \\
 &= b_0(\Prefix', \x, \y) + \frac{1}{N} \sum_{u=1}^U \sum_{n=1}^N
-    \sum_{k=K+1}^{K'} \Cap(x_n, p_k \given \Prefix') \wedge \one [ x_n \in e_u ] \wedge \one [ y_n = q_u ],
+    \sum_{k=K+1}^{K'} \Cap(x_n, p_k \given \Prefix') \wedge \one [ x_n \in e_u ]\, \one [ y_n = q_u ],
 \end{align}
 thus rearranging gives
 \begin{align}
