Move some material to appendix and small edits
- Turn on JMLR-specific cruft
- Move excessive antecedent results to Appendix A
- Move similar support bound proof to Appendix B
- Add some explanation around bounds we don't use

--- a/paper/arxiv.tex
+++ b/paper/arxiv.tex
@@ -1,6 +1,6 @@
 \documentclass[twoside,11pt]{article}
-%\usepackage{jmlr2e}            % <- uncomment for JMLR submission
-\usepackage{jmlr2e-stripped}    % <- uncomment for arXiv version
+\usepackage{jmlr2e}            % <- uncomment for JMLR submission
+%\usepackage{jmlr2e-stripped}    % <- uncomment for arXiv version
 
 \usepackage{amsmath,amsfonts}
 \usepackage{url}
@@ -85,5 +85,8 @@ and mining rules.
 
 \vskip 0.2in
 \bibliography{refs}
+
+\appendix
+\input{sections/appendix}
 
 \end{document}
