--- a/paper/sections/bounds.tex
+++ b/paper/sections/bounds.tex
@@ -678,144 +678,19 @@ observations that each such rule must correctly classify.
 \subsection{Upper bound on antecedent support}
 \label{sec:ub-support}
 
-In the previous section~(\S\ref{sec:lb-support}), we proved lower bounds
-on antecedent support; in this section, we give an upper bound on
-antecedent support.
+In the previous section~(\S\ref{sec:lb-support}), we proved lower bounds on
+antecedent support; in Appendix~A, we give an upper bound on antecedent support.
 %
 Specifically, Theorem~\ref{thm:ub-support} shows that an antecedent's
 support in a rule list cannot be too similar to the set of data not
 captured by preceding antecedents in the rule list.
-
-\begin{theorem}[Upper bound on antecedent support]
-\label{thm:ub-support}
-Let ${\OptimalRL = (\Prefix, \Labels, \Default, K)}$
-be any optimal rule list with objective~$\OptimalObj$, \ie
-${\OptimalRL \in \argmin_\RL \Obj(\RL, \x, \y)}$,
-and let ${\Prefix = (p_1, \dots, p_{j-1},}$
-${p_j, \dots, p_{K-1}, p_K)}$ be its prefix.
 %
-The last antecedent~$p_K$ in~$\Prefix$ has support
-\begin{align}
-\Supp(p_K, \x \given \Prefix) \le 1 - \Supp(\Prefix^{K-1}, \x) - \Reg,
-\label{eq:ub-support-last}
-\end{align}
-where ${\Prefix^{K-1} = (p_1, \dots, p_{K-1})}$,
-with equality implying that there also exists a shorter optimal rule list
-${\RL' = (\Prefix^{K-1}, \Labels', \Default', K - 1) \in}$ ${\argmin_\RL \Obj(\RL, \x, \y)}$
-with prefix~$\Prefix^{K-1}$.
-%
-For all ${k \le K - 1}$, every antecedent~$p_k$ in~$\Prefix$ has support
-less than the fraction of all data not captured by preceding antecedents,
-by an amount greater than the regularization parameter~$\Reg$:
-\begin{align}
-\Supp(p_k, \x \given \Prefix) \le 1 - \Supp(\Prefix^{k-1}, \x) - \Reg,
-\label{eq:ub-support}
-\end{align}
-where ${\Prefix^{k-1} = (p_1, \dots, p_{k-1})}$.
-\end{theorem}
-
-\begin{proof}
-We begin by focusing on the last antecedent in a rule list.
-%
-Let ${\RL = (\Prefix, \Labels, \Default, K)}$
-be a rule list with prefix ${\Prefix = (p_1, \dots, p_K)}$
-and objective ${\Obj(\RL, \x, \y) \le \OptimalObj}$, where
-${\OptimalObj \equiv}$ ${\min_{\RLB} \Obj(\RLB, \x, \y)}$
-is the optimal objective.
-%
-Also let ${\RL' = (\Prefix', \Labels', \Default', K + 1)}$
-be a rule list whose prefix ${\Prefix' = (p_1, \dots, p_K, p_{K+1})}$
-starts with~$\Prefix$ and ends with a new antecedent~$p_{K+1}$.
-%
-Suppose~$p_{K+1}$ in the context of~$\Prefix'$ captures nearly all
-data not captured by~$\Prefix$, except for a fraction~$\epsilon$
-upper bounded by the regularization parameter~$\Reg$:
-\begin{align}
-1 - \Supp(\Prefix, \x) - \Supp(p_{K+1}, \x \given \Prefix') \equiv \epsilon \le \Reg.
-\end{align}
-%
-Since~$\Prefix'$ starts with~$\Prefix$,
-its prefix misclassification error is at least as great;
-the only discrepancy between the misclassification errors
-of~$\RL$ and~$\RL'$ can come from the difference between the support of
-the set of data not captured by~$\Prefix$ and the support of~$p_{K+1}$:
-\begin{align}
-| \Loss(\RL', \x, \y) - \Loss(\RL, \x, \y) | \le
-1 - \Supp(\Prefix, \x) - \Supp(p_{K+1}, \x \given \Prefix') = \epsilon.
-\end{align}
-The best outcome for~$\RL'$ would occur if its misclassification
-error were smaller than that of~$\RL$ by~$\epsilon$,
-%\eg this could happen if all data not captured by~$\Prefix'$
-%had the same class label, in which case the default rule of~$\RL'$
-%would incur zero misclassification error.
-% --> it's more complicated, would need to discuss minority class label, etc.
-%
-therefore
-\begin{align}
-\Obj(\RL', \x, \y) &= \Loss(\RL', \x, \y) + \Reg (K+1) \nn \\
-&\ge \Loss(\RL, \x, \y) - \epsilon + \Reg(K+1)
-= \Obj(\RL, \x, \y) - \epsilon + \Reg \ge \Obj(\RL, \x, \y) \ge \OptimalObj.
-\end{align}
-$\RL'$ is an optimal rule list,
-\ie ${\RL' \in \argmin_{\RLB} \Obj(\RLB, \x, y)}$,
-if and only if ${\Obj(\RL', \x, \y) = \Obj(\RL, \x, \y) =}$ ${\OptimalObj}$,
-which requires ${\epsilon = \Reg}$.
-%
-Otherwise, ${\epsilon < \Reg}$, in which case
-\begin{align}
-\Obj(\RL', \x, \y) \ge \Obj(\RL, \x, \y) - \epsilon + \Reg
-> \Obj(\RL, \x, \y) \ge \OptimalObj,
-\end{align}
-\ie $\RL'$ is not optimal.
-%
-This proves the first half of Theorem~\ref{thm:ub-support}.
-
-To finish, we prove the bound in~\eqref{eq:ub-support} by contradiction.
-%
-First, note that the data not captured by~$\Prefix'$
-has normalized support~${\epsilon \le \Reg}$, \ie
-\begin{align}
-1 - \Supp(\Prefix', \x) = 1 - \Supp(\Prefix, \x) - \Supp(p_{K+1}, \x \given \Prefix') = \epsilon \le \Reg.
-\end{align}
-Thus for any rule list~$\RL''$ whose prefix
-$\Prefix'' = (p_1, \dots, p_{K+1}, \dots, p_{K'})$ starts
-with~$\Prefix'$ and ends with one or more additional rules,
-each additional rule~$p_k$ has support
-${\Supp(p_k, \x \given \Prefix'') \le}$ ${\epsilon \le \Reg}$,
-for all~${k > K+1}$.
-%
-By Theorem~\ref{thm:min-capture},
-all of the additional rules have insufficient support,
-therefore~$\Prefix''$ cannot be optimal,
-\ie ${\RL'' \notin \argmin_{\RLB} \Obj(\RLB, \x, \y)}$.
-\end{proof}
-
-Similar to Theorem~\ref{thm:min-capture}, our lower bound on
-antecedent support, we can apply Theorem~\ref{thm:ub-support}
-in the contexts of both constructing rule lists and
-rule mining~(\S\ref{sec:setup}).
-%
-Theorem~\ref{thm:ub-support} implies that if we only seek a single
-optimal rule list, then during branch-and-bound execution,
-we can prune a prefix if we ever add an antecedent with support
-too similar to the support of the set of data not captured by the
-preceding antecedents.
-%
-One way to view this result is that if
-${\RL = (\Prefix, \Labels, \Default, K)}$
-and ${\RL' = (\Prefix', \Labels', \Default', K + 1)}$
-are rule lists such that~$\Prefix'$ starts with~$\Prefix$
-and ends with an antecedent that captures all or nearly all
-data not captured by~$\Prefix$, then the new rule in~$\RL'$
-behaves similar to the default rule of~$\RL$.
-%
-As a result, the misclassification error of~$\RL'$ must be
-similar to that of~$\RL$, and any reduction may not be
-sufficient to offset the penalty for longer prefixes.
-%
-Furthermore, Theorem~\ref{thm:ub-support} implies that we should
+In particular, Theorem~\ref{thm:ub-support} implies that we should
 only mine rules with normalized support less than or equal to ${1 - \Reg}$;
 we need not mine rules with a larger fraction of observations.
+%
+Note that we do not otherwise use this bound in our implementation,
+because we did not observe a meaningful benefit in preliminary experiments.
 \end{arxiv}
 
 \begin{arxiv}
@@ -839,7 +714,8 @@ if it does not obey the bound in~\eqref{eq:min-capture-correct}
 of Theorem~\ref{thm:min-capture-correct}.
 %
 Define~$p_k$ to have excessive support in~$\Prefix$ if it
-does not obey the appropriate bound in Theorem~\ref{thm:ub-support},
+does not obey the appropriate bound in Theorem~\ref{thm:ub-support}
+(Appendix~\ref{app:ub-support}),
 \ie either it's the last antecedent and doesn't obey~\eqref{eq:ub-support},
 or it's any other antecedent and doesn't obey~\eqref{eq:ub-support-last}.
 %
@@ -891,8 +767,8 @@ ${\RLB \notin \argmin_{\RL^\dagger} \Obj(\RL^\dagger, \x, \y)}$.
 \end{theorem}
 
 \begin{proof}
-Combine Propositions~\ref{prop:min-capture},
-\ref{prop:min-capture-correct}, and~\ref{prop:ub-support}.
+Combine Proposition~\ref{prop:min-capture}, Proposition~\ref{prop:min-capture-correct},
+and Proposition~\ref{prop:ub-support} (Appendix~A).
 \end{proof}
 
 \begin{proposition}[Insufficient antecedent support propagates]
@@ -1012,53 +888,6 @@ ${\Supp(P_{K'}, \x \given \PrefixB) \le \Supp(p_{K}, \x \given \Prefix)}$.
 %
 By Theorem~\ref{thm:min-capture-correct},
 ${\RLB \notin \argmin_{\RL^\dagger} \Obj(\RL^\dagger, \x, \y)}$.
-\end{proof}
-
-\begin{proposition}[Excessive antecedent support propagates]
-\label{prop:ub-support}
-Define~$\StartContains(\Prefix)$ as in~\eqref{eq:start-contains},
-and let ${\Prefix = (p_1, \dots, p_{K})}$ be a prefix,
-such that its last antecedent~$p_{K}$ has excessive support,
-\ie the opposite of the bound in~\eqref{eq:ub-support-last}:
-\begin{align}
-\Supp(p_K, \x \given \Prefix) > 1 - \Supp(\Prefix^{K-1}, \x) - \Reg,
-\end{align}
-where ${\Prefix^{K-1} = (p_1, \dots, p_{K-1})}$.
-%
-Let ${\RLB = (\PrefixB, \LabelsB, \DefaultB, \kappa)}$
-be any rule list with prefix
-${\PrefixB =}$ ${(P_1, \dots, P_{\kappa})}$
-such that~$\PrefixB$ starts with ${\PrefixB^{K'-1} =}$
-${(P_1, \dots, P_{K'-1}) \in \StartContains(\Prefix^{K-1})}$
-and~${P_{K'} = p_{K}}$.
-%
-It follows that~$P_{K'}$ has excessive support in prefix~$\PrefixB$,
-and furthermore, ${\RLB \notin \argmin_{\RL} \Obj(\RL, \x, \y)}$.
-\end{proposition}
-
-\begin{proof}
-Since ${\PrefixB^{K'} = (P_1, \dots, P_{K'})}$
-contains all the antecedents in~$\Prefix$, we have that
-\begin{align}
-\Supp(\PrefixB^{K'}, \x) \ge \Supp(\Prefix, \x).
-\end{align}
-Expanding these two terms gives
-\begin{align}
-\Supp(\PrefixB^{K'}, \x)
-&= \Supp(\PrefixB^{K'-1}, \x) + \Supp(P_{K'}, \x \given \PrefixB) \nn \\
-&\ge \Supp(\Prefix, \x)
-= \Supp(\Prefix^{K-1}, \x) + \Supp(p_K, \x \given \Prefix)
-> 1 - \Reg.
-\end{align}
-Rearranging gives
-\begin{align}
-\Supp(P_{K'}, \x \given \PrefixB)
-> 1 - \Supp(\PrefixB^{K'-1}, \x) - \Reg,
-\end{align}
-thus~$P_{K'}$ has excessive support in~$\PrefixB$.
-%
-By Theorem~\ref{thm:ub-support},
-${\RLB \notin \argmin_{\RL} \Obj(\RL, \x, \y)}$.
 \end{proof}
 
 Theorem~\ref{thm:reject} implies potentially significant
@@ -1579,8 +1408,10 @@ we expect to obtain via rule mining~(\S\ref{sec:setup}).
 We now present a relaxation of our equivalent support bound
 from Theorem~\ref{thm:equivalent}.
 %
-Note that our implementation~(\S\ref{sec:implementation}) does not
-currently leverage the bound in Theorem~\ref{thm:similar}.
+Understanding how to exploit this result in practice
+represents an exciting direction for future work;
+our implementation~(\S\ref{sec:implementation}) does not
+currently leverage the bound in Theorem~\ref{thm:similar}
 
 \begin{theorem}[Similar support bound]
 \label{thm:similar}
@@ -1625,80 +1456,7 @@ objective lower bounds of~$\RL$ and~$\RLB$, respectively.
 \end{theorem}
 
 \begin{proof}
-We begin by defining four related rule lists.
-%
-First, let ${\RL = (\Prefix, \Labels, \Default, K)}$
-be a rule list with prefix ${\Prefix = (p_1, \dots, p_K)}$
-and labels ${\Labels = (q_1, \dots, q_K)}$.
-%
-Second, let ${\RLB = (\PrefixB, \LabelsB, \DefaultB, \kappa)}$
-be a rule list with prefix ${\PrefixB = (P_1, \dots, P_\kappa)}$
-and labels ${\LabelsB = (Q_1, \dots, Q_\kappa)}$.
-%
-Define~$\omega$ as in~\eqref{eq:omega}
-and~$\Omega$ as in~\eqref{eq:big-omega},
-and require that~${\omega, \Omega \le \Reg}$.
-%
-Third, let ${\RL' = (\Prefix', \Labels', \Default', K') \in}$
-${\StartsWith(\Prefix)}$ be any rule list
-whose prefix starts with~$\Prefix$, such that~${K' \ge K}$.
-%
-Denote the prefix and labels of~$\RL'$ by
-${\Prefix' = (p_1, \dots, p_K, p_{K+1}, \dots, p_{K'})}$
-and ${\Labels = (q_1, \dots, q_{K'})}$,
-respectively.
-%
-Finally, define
-${\RLB' = (\PrefixB', \LabelsB', \DefaultB', \kappa') \in \StartsWith(\PrefixB)}$
-to be the `analogous' rule list, \ie whose prefix
-${\PrefixB' =}$ ${(P_1, \dots, P_\kappa, P_{\kappa+1}, \dots, P_{\kappa'})
-= (P_1, \dots, P_\kappa, p_{K+1}, \dots, p_{K'})}$
-starts with~$\PrefixB$ and ends with the same ${K'-K}$
-antecedents as~$\Prefix'$.
-%
-Let ${\LabelsB' = (Q_1, \dots, Q_{\kappa'})}$
-denote the labels of~$\RLB'$.
-
-%Suppose that the lower bounds of~$\Prefix$ and~$\PrefixB$
-%obey ${b(\Prefix, \x, \y) < b(\PrefixB, \x, \y)}$.
-%
-The smallest possible objective for~$\RLB'$, in relation
-to the objective of~$\RL'$, reflects both the difference
-between the objective lower bounds of~$\RLB$ and~$\RL$
-and the largest possible discrepancy between the
-objectives of~$\RL'$ and~$\RLB'$.
-%
-The latter would occur if~$\RL'$ misclassified all the data
-corresponding to both~$\omega$ and~$\Omega$ while~$\RLB'$
-correctly classified this same data, thus
-\begin{align}
-\Obj(\RLB', \x, \y) \ge \Obj(\RL', \x, \y)
-  + b(\PrefixB, \x, \y) - b(\Prefix, \x, \y) - \omega - \Omega.
-\label{eq:similar-analogous}
-\end{align}
-%
-
-Now let~$\RLB^*$ be an optimal rule list with prefix
-constrained to start with~$\PrefixB$,
-\begin{align}
-\RLB^* \in \argmin_{\RLB^\dagger \in \StartsWith(\PrefixB)} \Obj(\RLB^\dagger, \x, \y),
-\end{align}
-and let~$\kappa^*$ be the length of~$\RLB^*$.
-%
-Also let~$\RL^*$ be the analogous $K^*$-rule list whose prefix
-starts with~$\Prefix$ and ends with the same~${\kappa^* - \kappa}$
-antecedents as~$\RLB^*$, where~${K^* = K + \kappa^* - \kappa}$.
-%
-By~\eqref{eq:similar-analogous},
-\begin{align}
-\min_{\RLB^\dagger \in \StartsWith(\PrefixB)} \Obj(\RLB^\dagger, \x, \y)
-&= \Obj(\RLB^*, \x, \y) \nn \\
-&\ge \Obj(\RL^*, \x, \y)
-  + b(\PrefixB, \x, \y) - b(\Prefix, \x, \y) - \omega - \Omega \nn \\
-&\ge \min_{\RL^\dagger \in \StartsWith(\Prefix)} \Obj(\RL^\dagger, \x, \y)
-  + b(\PrefixB, \x, \y) - b(\Prefix, \x, \y) - \omega - \Omega.
-\end{align}
-
+Appendix B.
 \end{proof}
 
 Theorem~\ref{thm:similar} implies that if prefixes~$\Prefix$
