--- a/paper/sections/bounds.tex
+++ b/paper/sections/bounds.tex
@@ -715,7 +715,7 @@ of Theorem~\ref{thm:min-capture-correct}.
 %
 Define~$p_k$ to have excessive support in~$\Prefix$ if it
 does not obey the appropriate bound in Theorem~\ref{thm:ub-support}
-(Appendix~\ref{app:ub-support}),
+(Appendix~A),
 \ie either it's the last antecedent and doesn't obey~\eqref{eq:ub-support},
 or it's any other antecedent and doesn't obey~\eqref{eq:ub-support-last}.
 %
