--- a/paper/sections/appendix.tex
+++ b/paper/sections/appendix.tex
@@ -5,39 +5,35 @@
 Let ${\OptimalRL = (\Prefix, \Labels, \Default, K)}$
 be any optimal rule list with objective~$\OptimalObj$, \ie
 ${\OptimalRL \in \argmin_\RL \Obj(\RL, \x, \y)}$,
-and let ${\Prefix = (p_1, \dots, p_{j-1},}$
-${p_j, \dots, p_{K-1}, p_K)}$ be its prefix.
+and let ${\Prefix = (p_1, \dots, p_{k-1},}$
+${p_k, \dots, p_K)}$ be its prefix.
 %
-The last antecedent~$p_K$ in~$\Prefix$ has support
-\begin{align}
-\Supp(p_K, \x \given \Prefix) \le 1 - \Supp(\Prefix^{K-1}, \x) - \Reg,
-\label{eq:ub-support-last}
-\end{align}
-where ${\Prefix^{K-1} = (p_1, \dots, p_{K-1})}$,
-with equality implying that there also exists a shorter optimal rule list
-${\RL' = (\Prefix^{K-1}, \Labels', \Default', K - 1) \in}$ ${\argmin_\RL \Obj(\RL, \x, \y)}$
-with prefix~$\Prefix^{K-1}$.
-%
-For all ${k \le K - 1}$, every antecedent~$p_k$ in~$\Prefix$ has support
-less than the fraction of all data not captured by preceding antecedents,
+For each ${k \le K}$, antecedent~$p_k$ in~$\Prefix$
+has support less than or equal to
+the fraction of all data not captured by preceding antecedents,
 by an amount greater than the regularization parameter~$\Reg$:
 \begin{align}
 \Supp(p_k, \x \given \Prefix) \le 1 - \Supp(\Prefix^{k-1}, \x) - \Reg,
 \label{eq:ub-support}
 \end{align}
 where ${\Prefix^{k-1} = (p_1, \dots, p_{k-1})}$.
+%
+For the last antecedent, \ie when ${p_k = p_K}$, equality implies
+that there also exists a shorter optimal rule list
+${\RL' = (\Prefix^{K-1}, \Labels', \Default', K - 1) \in}$ ${\argmin_\RL \Obj(\RL, \x, \y)}$.
+%with prefix~$\Prefix^{K-1}$.
 \end{theorem}
 
 \begin{proof}
-We begin by focusing on the last antecedent in a rule list.
+First, we focus on the last antecedent~$p_{K+1}$ in a rule list~$\RL'$.
 %
 Let ${\RL = (\Prefix, \Labels, \Default, K)}$
 be a rule list with prefix ${\Prefix = (p_1, \dots, p_K)}$
-and objective ${\Obj(\RL, \x, \y) \le \OptimalObj}$, where
+and objective ${\Obj(\RL, \x, \y) \ge \OptimalObj}$, where
 ${\OptimalObj \equiv}$ ${\min_{\RLB} \Obj(\RLB, \x, \y)}$
 is the optimal objective.
 %
-Also let ${\RL' = (\Prefix', \Labels', \Default', K + 1)}$
+Let ${\RL' = (\Prefix', \Labels', \Default', K + 1)}$
 be a rule list whose prefix ${\Prefix' = (p_1, \dots, p_K, p_{K+1})}$
 starts with~$\Prefix$ and ends with a new antecedent~$p_{K+1}$.
 %
@@ -80,13 +76,15 @@ Otherwise, ${\epsilon < \Reg}$, in which case
 \Obj(\RL', \x, \y) \ge \Obj(\RL, \x, \y) - \epsilon + \Reg
 > \Obj(\RL, \x, \y) \ge \OptimalObj,
 \end{align}
-\ie $\RL'$ is not optimal.
+therefore $\RL'$ is not optimal, \ie  ${\RL' \notin \argmin_{\RLB} \Obj(\RLB, \x, \y)}$.
 %
-This proves the first half of Theorem~\ref{thm:ub-support}.
+This demonstrates the desired result for ${k = K}$.
 
-To finish, we prove the bound in~\eqref{eq:ub-support} by contradiction.
+In the remainder, we prove the bound in~\eqref{eq:ub-support} by contradiction,
+in the context of a rule list~$\RL''$.
 %
-First, note that the data not captured by~$\Prefix'$
+Let~$\RL$ and~$\RL'$ retain their definitions from above,
+thus as before, that the data not captured by~$\Prefix'$
 has normalized support~${\epsilon \le \Reg}$, \ie
 \begin{align}
 1 - \Supp(\Prefix', \x) = 1 - \Supp(\Prefix, \x) - \Supp(p_{K+1}, \x \given \Prefix') = \epsilon \le \Reg.
@@ -132,7 +130,7 @@ sufficient to offset the penalty for longer prefixes.
 Define~$\StartContains(\Prefix)$ as in~\eqref{eq:start-contains},
 and let ${\Prefix = (p_1, \dots, p_{K})}$ be a prefix,
 such that its last antecedent~$p_{K}$ has excessive support,
-\ie the opposite of the bound in~\eqref{eq:ub-support-last}:
+\ie the opposite of the bound in~\eqref{eq:ub-support}:
 \begin{align}
 \Supp(p_K, \x \given \Prefix) > 1 - \Supp(\Prefix^{K-1}, \x) - \Reg,
 \end{align}
